<?xml version="1.0"?>
<package>
  <name>roscpprtimulib</name>
  <version>1.0.0</version>
  <description>ROS RTIMULib demo in C++</description>

  <maintainer email="info@richards-tech.com">richards-tech</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
